--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,9 +35,9 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://10.3.20.205/prd"
-db.default.user=prd
-db.default.password="567890"
+db.default.url="jdbc:postgresql://127.0.0.1/cloud"
+db.default.user=postgres
+db.default.password="123456"
 
 db.default.logStatements= false
 
